--- a/UT4/TE2/src/Express/travelroad/views/index.pug
+++ b/UT4/TE2/src/Express/travelroad/views/index.pug
@@ -2,6 +2,6 @@ extends layout
 
 block content
   h1= 'Mi lista de viajes'  
-  a(href='/wished') wished
+  a(href='/wished.pug') wished
   br
   a(href='/visited') visited
